try fix bug overflow

--- a/wp-content/themes/S2_Themes/css/confiance.css
+++ b/wp-content/themes/S2_Themes/css/confiance.css
@@ -1,7 +1,7 @@
 .confiance{
     width: 100%;
-    /* padding-left: 8vw;
-    padding-right: 8vw; */
+    padding-left: 8vw;
+    padding-right: 8vw;
     overflow: hidden;
     margin-bottom: 284px;
 }
