--- a/wp-content/themes/S2_Themes/css/descriptionCommerce.css
+++ b/wp-content/themes/S2_Themes/css/descriptionCommerce.css
@@ -1,8 +1,8 @@
 .descriptionCommerce{
     width: 100%;
     height: 150vh;
-    /* padding-left: 8vw;
-    padding-right: 8vw; */
+    padding-left: 8vw;
+    padding-right: 8vw;
     display: flex;
     align-items: flex-start;
     justify-content: space-between;
