--- a/wp-content/themes/S2_Themes/css/descriptionCommerceDetails.css
+++ b/wp-content/themes/S2_Themes/css/descriptionCommerceDetails.css
@@ -1,7 +1,7 @@
 .descriptionCommerceDetails{
     width: 100%;
-    /* padding-left: 8vw;
-    padding-right: 8vw; */
+    padding-left: 8vw;
+    padding-right: 8vw;
     margin-bottom: 284px;
     overflow: hidden;
 
